Adding livereload and changing buttons style

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "gulp-uglifycss": "latest",
     "gulp-rename": "latest",
     "gulp-uglify": "latest",
+    "gulp-watch": "latest",
+    "connect-livereload": "latest",
+    "tiny-lr": "latest",
     "jshint": "latest"
   }
 }
