Add express as a node package dependency - Closes #33

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "connect-livereload": "latest",
     "tiny-lr": "latest",
     "jshint": "latest"
+  },
+  "dependencies": {
+    "express": "^4.13.3"
   }
 }
