--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-spec-reporter": "0.0.20",
-    "open-sans-fontface": "^1.4.0",
+    "roboto-fontface": "^0.4.2",
     "tiny-lr": "latest"
   },
   "dependencies": {
