--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.1",
   "private": false,
   "scripts": {
-    "jshint": "jshint js/. --exclude js/vendor"
+    "jshint": "jshint js/. --exclude js/vendor",
+    "test": "karma start karma.conf.js --singleRun=true"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "connect-livereload": "latest",
     "gulp": "^3.9.0",
     "gulp-concat": "latest",
@@ -17,14 +19,16 @@
     "gulp-uglify": "latest",
     "gulp-uglifycss": "latest",
     "gulp-watch": "latest",
-    "jasmine-core": "latest",
     "jshint": "latest",
     "karma": "^0.13.10",
+    "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.2",
     "karma-coveralls": "^1.1.2",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "karma-spec-reporter": "0.0.20",
+    "karma-mocha": "^0.2.1",
+    "karma-nyan-reporter": "^0.2.3",
+    "karma-phantomjs-launcher": "^0.2.3",
+    "mocha": "^2.4.5",
+    "phantomjs": "^2.1.3",
     "roboto-fontface": "^0.4.2",
     "tiny-lr": "latest"
   },
