--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "karma-mocha": "^0.2.1",
     "karma-nyan-reporter": "^0.2.3",
     "karma-phantomjs-launcher": "^0.2.3",
+    "karma-sinon": "^1.0.4",
     "mocha": "^2.4.5",
     "phantomjs": "^2.1.3",
     "roboto-fontface": "^0.4.2",
