--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "gulp-uglify": "latest",
     "gulp-uglifycss": "latest",
     "gulp-watch": "latest",
-    "jshint": "latest",
+    "jshint": "2.0.0",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.2",
     "karma-coveralls": "^1.1.2",
     "karma-mocha": "^0.2.1",
     "karma-nyan-reporter": "^0.2.3",
-    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-phantomjs-launcher": "1.0.0",
     "karma-sinon": "^1.0.4",
     "mocha": "^2.4.5",
-    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.3",
     "roboto-fontface": "^0.4.2",
+    "sinon":"1.17.3",
     "tiny-lr": "latest"
   },
   "dependencies": {
