--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   "dependencies": {
     "angular": "^1.4.7",
     "angular-sanitize": "^1.5.5",
+    "angularfire": "^1.2.0",
     "express": "^4.13.3",
-    "font-awesome": "^4.6.1"
+    "font-awesome": "^4.6.1",
+    "ng-dialog": "^0.6.0"
   }
 }
