--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "karma start karma.conf.js --singleRun=true"
   },
   "devDependencies": {
+    "angular-mocks": "^1.5.5",
     "chai": "^3.5.0",
     "connect-livereload": "latest",
     "gulp": "^3.9.0",
