Adds additional gulp and npm scripts to resolve #85

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chai": "^3.5.0",
     "connect-livereload": "latest",
     "gh-pages": "^0.11.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "latest",
     "gulp-concat-css": "latest",
     "gulp-jshint": "^1.11.2",
