--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "karma-coverage": "^0.5.2",
     "karma-coveralls": "^1.1.2",
     "karma-mocha": "^0.2.1",
+    "karma-mocha-reporter": "^2.0.2",
     "karma-nyan-reporter": "^0.2.3",
     "karma-phantomjs-launcher": "1.0.0",
     "karma-sinon": "^1.0.4",
