--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-register": "^6.8.0",
+    "ejs-loader": "^0.2.1",
     "eslint": "^2.9.0",
     "eslint-config-airbnb-base": "^2.0.0",
     "eslint-plugin-import": "^1.6.1",
+    "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
+    "html-webpack-template": "^4.0.0",
     "ng-annotate-loader": "^0.1.0",
     "raw-loader": "^0.5.1",
+    "underscore-template-loader": "^0.7.3",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
