--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "devDependencies": {
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.8.0",
-    "ejs-loader": "^0.2.1",
     "eslint": "^2.9.0",
     "eslint-config-airbnb-base": "^2.0.0",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^1.0.1",
     "eslint-plugin-import": "^1.6.1",
-    "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
     "html-webpack-template": "^4.0.0",
     "ng-annotate-loader": "^0.1.0",
@@ -29,6 +30,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "angular": "^1.5.5"
+    "angular": "^1.5.5",
+    "angular-aria": "^1.5.5",
+    "angular-es6": "^3.0.4",
+    "angular-route": "^1.5.5",
+    "angular-sanitize": "^1.5.5",
+    "angularfire": "^1.2.0",
+    "firebase": "^2.4.2"
   }
 }
