--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.8.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
     "eslint-config-airbnb-base": "^2.0.0",
     "eslint-config-angular": "^0.5.0",
@@ -25,6 +26,8 @@
     "html-webpack-template": "^4.0.0",
     "ng-annotate-loader": "^0.1.0",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "underscore-template-loader": "^0.7.3",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
@@ -36,6 +39,11 @@
     "angular-route": "^1.5.5",
     "angular-sanitize": "^1.5.5",
     "angularfire": "^1.2.0",
-    "firebase": "^2.4.2"
+    "file-loader": "^0.8.5",
+    "firebase": "^2.4.2",
+    "font-awesome": "^4.6.1",
+    "ng-dialog": "^0.6.0",
+    "roboto-fontface": "^0.4.5",
+    "url-loader": "^0.5.7"
   }
 }
