--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "firebase": "^2.4.2",
     "font-awesome": "^4.6.1",
     "ng-dialog": "^0.6.0",
+    "node-bourbon": "^4.2.8",
+    "node-neat": "^1.7.2",
     "roboto-fontface": "^0.4.5",
     "url-loader": "^0.5.7"
   }
