--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.0.1",
     "eslint-plugin-import": "^1.6.1",
+    "exports-loader": "^0.6.3",
+    "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
     "html-webpack-template": "^4.0.0",
     "ng-annotate-loader": "^0.1.0",
+    "ngtemplate-loader": "^1.3.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
