--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "angular-route": "^1.5.5",
     "angular-sanitize": "^1.5.5",
     "angularfire": "^1.2.0",
+    "chance": "^1.0.3",
     "file-loader": "^0.8.5",
     "firebase": "^2.4.2",
     "font-awesome": "^4.6.1",
