--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --config webpack.dev.config.js",
     "build": "./node_modules/.bin/webpack --config webpack.dist.config.js",
-    "lint": "eslint --ext .js .",
+    "lint": "eslint --ext .js . --ignore-path .gitignore",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -21,7 +21,7 @@
     "eslint-config-airbnb-base": "^2.0.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.0.1",
-    "eslint-plugin-import": "^1.6.1",
+    "eslint-plugin-import": "^1.8.0",
     "exports-loader": "^0.6.3",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
