--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "start": "./node_modules/.bin/webpack-dev-server --config webpack.dev.config.js",
     "build": "./node_modules/.bin/webpack --config webpack.dist.config.js",
     "lint": "eslint --ext .js . --ignore-path .gitignore",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start test/karma.conf.js --reporters=mocha --singleRun=true",
+    "test:watch": "karma start test/karma.conf.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "angular-mocks": "^1.5.5",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.8.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
     "eslint-config-airbnb-base": "^2.0.0",
@@ -26,8 +29,16 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
     "html-webpack-template": "^4.0.0",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.3",
+    "karma-nyan-reporter": "^0.2.4",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "mocha": "^2.4.5",
     "ng-annotate-loader": "^0.1.0",
     "ngtemplate-loader": "^1.3.1",
+    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
