--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "./node_modules/.bin/webpack-dev-server --config webpack.dev.config.js",
     "build": "./node_modules/.bin/webpack --config webpack.dist.config.js",
     "lint": "eslint --ext .js . --ignore-path .gitignore",
-    "test": "karma start test/karma.conf.js --reporters=mocha --singleRun=true",
+    "test": "NODE_ENV=test karma start test/karma.conf.js",
     "test:watch": "karma start test/karma.conf.js"
   },
   "author": "",
@@ -30,12 +30,18 @@
     "html-webpack-plugin": "^2.16.1",
     "html-webpack-template": "^4.0.0",
     "karma": "^0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-eslint": "^2.1.0",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.3",
     "karma-nyan-reporter": "^0.2.4",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
+    "mockfirebase": "^0.12.0",
     "ng-annotate-loader": "^0.1.0",
     "ngtemplate-loader": "^1.3.1",
     "phantomjs-prebuilt": "^2.1.7",
