--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "NODE_ENV=test karma start test/karma.conf.js",
     "test:watch": "karma start test/karma.conf.js"
   },
+  "engines": {
+    "node": ">=5.6.0"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
