--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "./node_modules/.bin/webpack --config webpack.dist.config.js",
     "lint": "eslint --ext .js . --ignore-path .gitignore",
     "test": "NODE_ENV=test karma start test/karma.conf.js",
-    "test:watch": "karma start test/karma.conf.js"
+    "ci": "NODE_ENV=test karma start test/karma.conf.js --single-run --browsers PhantomJS"
   },
   "engines": {
     "node": ">=5.6.0"
