Uses isparta for coverage reporting

--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
     "html-webpack-template": "^5.0.0",
+    "isparta-loader": "^2.0.0",
     "karma": "^0.13.22",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
     "karma-eslint": "^2.1.0",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.3",
