Adds missing dependency node-sass to package.json

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "ng-dialog": "^0.6.0",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
+    "node-sass": "^3.7.0",
     "roboto-fontface": "^0.4.5",
     "url-loader": "^0.5.7"
   },
