Upgrading versions of libs

--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^2.0.2",
     "karma-nyan-reporter": "^0.2.3",
-    "karma-phantomjs-launcher": "1.0.0",
+    "karma-phantomjs-launcher": "latest",
     "karma-sinon": "^1.0.4",
     "mocha": "^2.4.5",
-    "phantomjs-prebuilt": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.4",
     "roboto-fontface": "^0.4.2",
     "sinon": "1.17.3",
     "tiny-lr": "latest"
   },
   "dependencies": {
-    "angular": "^1.4.7",
+    "angular": "^1.4.9",
     "angular-aria": "^1.5.5",
     "angular-sanitize": "^1.5.5",
     "angularfire": "^1.2.0",
