Trying to fix build

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "latest",
     "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^2.0.0",
+    "gulp-sourcemaps": "latest",
     "gulp-uglify": "latest",
     "gulp-uglifycss": "latest",
     "gulp-watch": "latest",
