Removed server code. Added client implementation

--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "express": "^4.13.3",
     "font-awesome": "^4.6.1",
     "ng-dialog": "^0.6.0",
-    "multer": "1.1.0",
-    "csv-parse": "1.2.0"
+    "papaparse":"^4.2.0"
   }
 }
