--- a/.stylelintrc
+++ b/.stylelintrc
@@ -12,7 +12,9 @@
     "at-rule-name-space-after": "always-single-line",
     "at-rule-semicolon-newline-after": "always",
     "at-rule-no-vendor-prefix": true,
+    "property-no-vendor-prefix": true,
     "selector-no-vendor-prefix": true,
+    "value-no-vendor-prefix": true,
     "media-feature-name-no-vendor-prefix": true,
     "block-closing-brace-empty-line-before": "never",
     "block-closing-brace-newline-after": "always",
@@ -41,9 +43,11 @@
         "inside-single-line-block"
       ],
     } ],
+    "indentation": 2,
     "declaration-no-important": true,
     "declaration-bang-space-after": "never",
     "declaration-bang-space-before": "always",
+    "declaration-block-no-duplicate-properties": true,
     "declaration-block-no-redundant-longhand-properties": true,
     "declaration-block-no-shorthand-property-overrides": true,
     "declaration-block-semicolon-newline-after": "always-multi-line",
@@ -52,6 +56,7 @@
     "declaration-block-single-line-max-declarations": 1,
     "declaration-block-trailing-semicolon": "always",
     "declaration-colon-newline-after": "always-multi-line",
+    "declaration-colon-space-after": "always-single-line",
     "declaration-colon-space-before": "never",
     "declaration-empty-line-before": "never",
     "font-family-no-duplicate-names": true,
