--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "core-js": "^2.4.1",
     "express": "^4.13.3",
     "font-awesome": "^4.6.1",
+    "jspdf": "^1.3.3",
     "ng-dialog": "^0.6.0",
     "ng-file-upload": "12.2.13",
     "opencollective": "^1.0.3",
